ONE LAST FINAL CHANGE
Added description header to each recipe as a last minute change bc I'm
pretty sure each recipe needs to have that.

--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -24,6 +24,8 @@
             
             <img src="../images_recipes/jigld.jpg" width="350" height="350" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body" class="center">
 
+            <h3 style="text-align: center;">Description</h3>
+
             <p style="text-indent: 40px">Hey you! You ever woke up one day and been like "You know, today seems like the day to have a lazy day. Should probably just grab some stuff from the convenience store today"? Well your in luck! Jigidy has regular lazy days, and so should you! Be more like Jigidy, and have lazy days!</p>
 
             <p style="text-indent: 40px">Whats that? You want to be healthier? Bah! You think you're so clever, with your salads and avocado toast and vegan sausages, but haven't you ever just wanted to slap yourself onto a chair with a canister of pringles, pepperete sticks and pizza pockets? I know I sure do so I'm going to teach you to have the laziest day on the planet you can possibly imagine, because yes its bad for your body but its good for <strong> YOUR SOUL</strong>. Lets Go!</p>
