--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     width: 40%;
                 }
             </style>
+            <link rel="stylesheet" href="style.css">
         </head>
 
         <body>
@@ -26,7 +27,7 @@
 
             <h3 style="text-align: center;">The Programming Ethos of Laziness, Now with Food!</h3>
 
-            <p style="text-align: center;">Behold, ye of hungry belly. Have you found yourself starving for any food to stick into your gullet, any at all? Do you essentially treat food like its fuel in the tank? Your in luck then, because these are three recipes that should just conjure food for you as quick as possible, no questions asked, undoubtedly energizing and reasonably quick to make. Try out this Homemade Mac and Cheese recipe, or these Perogies and Vegan Sausage with Onion. Or, if you're feeling really lazy, you can always just walk into your convienence store and grab all of the things your ashamed to tell us that you eat. I know I did! These recipes teach you how to eat shamefully simple and lazy foods with bravery and joy. So what are you waiting for? Apply the programming ethos, and eat lazy!</p>
+            <p class="main-paragraph">Behold, ye of hungry belly. Have you found yourself starving for any food to stick into your gullet, any at all? Do you essentially treat food like its fuel in the tank? Your in luck then, because these are three recipes that should just conjure food for you as quick as possible, no questions asked, undoubtedly energizing and reasonably quick to make. Try out this Homemade Mac and Cheese recipe, or these Perogies and Vegan Sausage with Onion. Or, if you're feeling really lazy, you can always just walk into your convienence store and grab all of the things your ashamed to tell us that you eat. I know I did! These recipes teach you how to eat shamefully simple and lazy foods with bravery and joy. So what are you waiting for? Apply the programming ethos, and eat lazy!</p>
 
         <ul>
             <li><a href="recipes/hmMacandCheese.html">Homemade Mac and Cheese</a></li>
