Got first bit of CSS working
External CSS sheet works, wasn't working due to inline and internal
CSS. Spreading first class of CSS to multiple html pages. Recipes I mean

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -3,20 +3,6 @@
         <head>
             <meta charset="utf-8">
             <title>Homemade Mac and Cheese</title>
-            <style>
-                div {
-                    width: 400px;
-                    height: auto;
-                    text-align: center;
-                }
-
-                .center {
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 40%;
-                }
-            </style>
         </head>
 
         <body>
@@ -26,9 +12,9 @@
 
             <h3 style="text-align: center;">Description</h3>
             
-                <p style="text-indent: 40px">Have you ever desired your Moms homemade Mac and Cheese recipe, but never had the gumption to get off your lazy ass and make the stuff yourself? Well have no fear my friend! This is capitalism you ungrateful nerd, you don't get high quality super cheesy Mac and Cheese by yourself in this sort of economy. But don't worry. We're going to be as lazy about this as possible. Pull yourself up by the straps and get your boots on your hands, because you're about to have the greatest capitalist Mac and Cheese you ever had in your miserable life, and you didn't even have to go milk a cow for it!</p>
+                <p class="main-paragraph">Have you ever desired your Moms homemade Mac and Cheese recipe, but never had the gumption to get off your lazy ass and make the stuff yourself? Well have no fear my friend! This is capitalism you ungrateful nerd, you don't get high quality super cheesy Mac and Cheese by yourself in this sort of economy. But don't worry. We're going to be as lazy about this as possible. Pull yourself up by the straps and get your boots on your hands, because you're about to have the greatest capitalist Mac and Cheese you ever had in your miserable life, and you didn't even have to go milk a cow for it!</p>
 
-                <p style="text-indent: 40px;"><em>Some terms and conditions apply. Note that Jigidy's website is not responsible for bloating, constipation, lactose intolerance, gluten allergies or other medical conditions you cast aside in the rat race that is the pursuit of happiness. For further assistance, please see a medical professional who can give you the medications you need to eat this meal in exchange for hundreds of dollars that you definitely have.</em></p>
+                <p class="main-paragraph"><em>Some terms and conditions apply. Note that Jigidy's website is not responsible for bloating, constipation, lactose intolerance, gluten allergies or other medical conditions you cast aside in the rat race that is the pursuit of happiness. For further assistance, please see a medical professional who can give you the medications you need to eat this meal in exchange for hundreds of dollars that you definitely have.</em></p>
 
                 <ul>
                     <li>1 (16 ounce) package of elbow macaroni</li>
@@ -52,7 +38,7 @@
                     <li>Bake it in the oven for about 15 minutes. or 20. Or 30. You think I care? Burn your house down for all the damns I give.</li>
                 </ol>
 
-                <p><strong>There you go, some damn fine mac & cheese. I hope you're happy with my choices. I ain't. I went with 45 minutes, and now I don't have a house.</strong></p>
+                <p class="main-paragraph"><strong>There you go, some damn fine mac & cheese. I hope you're happy with my choices. I ain't. I went with 45 minutes, and now I don't have a house.</strong></p>
 
                 <a href="../index.html">Drunkenly stumble your way back to the homepage</a>
         </body>
