style.css linked in all pages, some elements working
We've applied CSS to several elements now using two classes, which are
".header" and ".main-paragraph". Easy enough, probably won't get to
styling the whole thing today, but we're now motoring down the right
track.

--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -3,14 +3,15 @@
         <head>
             <meta charset="utf-8">
             <title>Homemade Mac and Cheese</title>
+            <link rel="stylesheet" type="text/css" href="../style.css" media="screen">
         </head>
 
         <body>
-            <h1 style="text-align: center;">Homemade Mac and Cheese</h1>
+            <h1>Homemade Mac and Cheese</h1>
 
             <img src="../images_recipes/hmMacandCheese.jpg" width="350" height="500" alt="Some Tasty Mac and Cheese" class="center">
 
-            <h3 style="text-align: center;">Description</h3>
+            <h3>Description</h3>
             
                 <p class="main-paragraph">Have you ever desired your Moms homemade Mac and Cheese recipe, but never had the gumption to get off your lazy ass and make the stuff yourself? Well have no fear my friend! This is capitalism you ungrateful nerd, you don't get high quality super cheesy Mac and Cheese by yourself in this sort of economy. But don't worry. We're going to be as lazy about this as possible. Pull yourself up by the straps and get your boots on your hands, because you're about to have the greatest capitalist Mac and Cheese you ever had in your miserable life, and you didn't even have to go milk a cow for it!</p>
 
