--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -3,21 +3,7 @@
         <head>
             <meta charset="utf-8">
             <title>Jigidy's Lazy Day</title>
-            <style>
-                div {
-                    width: 400px;
-                    height: auto;
-                    text-align: center;
-                }
-
-                .center {
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 40%;
-                }
-            </style>
-        </head>
+            <link rel="stylesheet" href="../style.css"
 
         <body>
             <h1 style="text-align: center;">Jigidy's Lazy Day</h1>
@@ -26,11 +12,11 @@
 
             <h3 style="text-align: center;">Description</h3>
 
-            <p style="text-indent: 40px">Hey you! You ever woke up one day and been like "You know, today seems like the day to have a lazy day. Should probably just grab some stuff from the convenience store today"? Well your in luck! Jigidy has regular lazy days, and so should you! Be more like Jigidy, and have lazy days!</p>
+            <p class="main-paragraph">Hey you! You ever woke up one day and been like "You know, today seems like the day to have a lazy day. Should probably just grab some stuff from the convenience store today"? Well your in luck! Jigidy has regular lazy days, and so should you! Be more like Jigidy, and have lazy days!</p>
 
-            <p style="text-indent: 40px">Whats that? You want to be healthier? Bah! You think you're so clever, with your salads and avocado toast and vegan sausages, but haven't you ever just wanted to slap yourself onto a chair with a canister of pringles, pepperete sticks and pizza pockets? I know I sure do so I'm going to teach you to have the laziest day on the planet you can possibly imagine, because yes its bad for your body but its good for <strong> YOUR SOUL</strong>. Lets Go!</p>
+            <p class="main-paragraph">Whats that? You want to be healthier? Bah! You think you're so clever, with your salads and avocado toast and vegan sausages, but haven't you ever just wanted to slap yourself onto a chair with a canister of pringles, pepperete sticks and pizza pockets? I know I sure do so I'm going to teach you to have the laziest day on the planet you can possibly imagine, because yes its bad for your body but its good for <strong> YOUR SOUL</strong>. Lets Go!</p>
 
-            <p style="text-indent: 40px">But wait, I hear you ask. If you wanted to be lazy, why not just get a bag of doritos and be done with it. What are you some second-rate scrub? You just want doritos? No, we here at Jigidy Incorporated TM C R do laziness in style. No doritos. You gotta mix it up, get your laziness in style and class. Don't be a scrub, be...exceptional. Be lazily exceptional!</p>
+            <p class="main-paragraph">But wait, I hear you ask. If you wanted to be lazy, why not just get a bag of doritos and be done with it. What are you some second-rate scrub? You just want doritos? No, we here at Jigidy Incorporated TM C R do laziness in style. No doritos. You gotta mix it up, get your laziness in style and class. Don't be a scrub, be...exceptional. Be lazily exceptional!</p>
 
             <h4>The Possibilities!</h4>
 
