--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <body>
             <h1 class="header">Odin Recipes</h1>
 
-            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" width="350" height="500" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette" class="center">
+            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" width="350" height="500" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette" class="image">
 
             <h3 class="header">The Programming Ethos of Laziness, Now with Food!</h3>
 
