--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -10,7 +10,7 @@
             
             <img src="../images_recipes/jigld.jpg" width="350" height="350" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body" class="center">
 
-            <h3 style="text-align: center;">Description</h3>
+            <h3 class="header">Description</h3>
 
             <p class="main-paragraph">Hey you! You ever woke up one day and been like "You know, today seems like the day to have a lazy day. Should probably just grab some stuff from the convenience store today"? Well your in luck! Jigidy has regular lazy days, and so should you! Be more like Jigidy, and have lazy days!</p>
 
