Added some img css, but it don't work yet
I went with a type selector for this, so that it would apply the same
properties to each image, but it ain't workin yet. Will figure this out
though.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <body>
             <h1 class="header">Odin Recipes</h1>
 
-            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" width="350" height="500" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette" class="image">
+            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" width="350" height="500" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette">
 
-            <h3 class="header">The Programming Ethos of Laziness, Now with Food!</h3>
+            <h3 class="minor-header">The Programming Ethos of Laziness, Now with Food!</h3>
 
             <p class="main-paragraph">Behold, ye of hungry belly. Have you found yourself starving for any food to stick into your gullet, any at all? Do you essentially treat food like its fuel in the tank? Your in luck then, because these are three recipes that should just conjure food for you as quick as possible, no questions asked, undoubtedly energizing and reasonably quick to make. Try out this Homemade Mac and Cheese recipe, or these Perogies and Vegan Sausage with Onion. Or, if you're feeling really lazy, you can always just walk into your convienence store and grab all of the things your ashamed to tell us that you eat. I know I did! These recipes teach you how to eat shamefully simple and lazy foods with bravery and joy. So what are you waiting for? Apply the programming ethos, and eat lazy!</p>
 
