--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -9,7 +9,7 @@
         <body>
             <h1>Homemade Mac and Cheese</h1>
 
-            <img src="../images_recipes/hmMacandCheese.jpg" width="350" height="500" alt="Some Tasty Mac and Cheese" class="image">
+            <img src="../images_recipes/hmMacandCheese.jpg" alt="Some Tasty Mac and Cheese">
 
             <h3 class="header">Description</h3>
             
