--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -8,7 +8,7 @@
         <body>
             <h1 style="text-align: center;">Jigidy's Lazy Day</h1>
             
-            <img src="../images_recipes/jigld.jpg" width="350" height="350" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body" class="center">
+            <img src="../images_recipes/jigld.jpg" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body">
 
             <h3 class="header">Description</h3>
 
