--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -9,9 +9,9 @@
         <body>
             <h1>Perogies, Vegan Sausage and Onion</h1>
 
-            <img src="../images_recipes/pierogi_vegansausage_onion.jpg" width="450" height="500" alt="Perogies, Vegan Sausage and Onion" class="center">
+            <img src="../images_recipes/pierogi_vegansausage_onion.jpg" alt="Perogies, Vegan Sausage and Onion">
 
-            <h3 class="header">Description</h3>
+            <h3 class="minor-header">Description</h3>
 
             <p class="main-paragraph">You ever wanted the tastiest perogies you have ever had while also saving the lives of innocent hogs everywhere? Well your in luck, because ol' Jigidy knows how to do it. The wise man mostly makes his perogies without meat and may I say they are some of the best perogies you are going to find. They're also cheap, for all you starving students out there (I can relate).</p>
 
