Figured out what was wrong with the img properties
Ok, so its really dumb, but I was simply forgetting to round off each
property with a ; , that was it. smh.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <body>
             <h1 class="header">Odin Recipes</h1>
 
-            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" width="350" height="500" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette">
+            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette">
 
             <h3 class="minor-header">The Programming Ethos of Laziness, Now with Food!</h3>
 
