Images work, but need more. Also, background color
The images work. They're positioned correctly and are now responded to
CSS code, but there are some kinks to sort out with their dimensions
which may need more CSS selectors to sort out.

As a final spin to this project, I want to see if I can get some
background colors working for the page, on a gradient as well. Seems
like a way to push a little outside the bounds of what I've been
asked to do, so I can make further progress.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
             <meta charset="utf-8">
             <title></title>
             <link rel="stylesheet" href="style.css">
+           
         </head>
 
         <body>
+            <div class="gradient"></div>
             <h1 class="header">Odin Recipes</h1>
 
             <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette">
