--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="../style.css"
 
         <body>
-            <h1>Jigidy's Lazy Day</h1>
+            <h1 class="header">Jigidy's Lazy Day</h1>
             
             <img src="../images_recipes/jigld.jpg" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body">
 
