--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -7,7 +7,7 @@
         </head>
 
         <body>
-            <h1>Perogies, Vegan Sausage and Onion</h1>
+            <h1 class="header">Perogies, Vegan Sausage and Onion</h1>
 
             <img src="../images_recipes/pierogi_vegansausage_onion.jpg" alt="Perogies, Vegan Sausage and Onion">
 
