Images are done.
In the style.css file, the images are done. They look pretty good on the
webpages now.

All thats left is the gradient.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="gradient"></div>
             <h1 class="header">Odin Recipes</h1>
 
-            <img src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette">
+            <img class="img1" src="../odin-recipes/images_recipes/skullwithcigsmall.jpg" alt="Jigidy's Icon: Van Goghs Skull with a Cigarette">
 
             <h3 class="minor-header">The Programming Ethos of Laziness, Now with Food!</h3>
 
