--- a/recipes/jigld.html
+++ b/recipes/jigld.html
@@ -8,7 +8,7 @@
         <body>
             <h1 class="header">Jigidy's Lazy Day</h1>
             
-            <img src="../images_recipes/jigld.jpg" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body">
+            <img class="img4" src="../images_recipes/jigld.jpg" alt="Jigidy's Lazy Day. Man shown in picture is only Jigidy in spirit, not in body">
 
             <h3 class="minor-header">Description</h3>
 
