--- a/recipes/hmMacandCheese.html
+++ b/recipes/hmMacandCheese.html
@@ -9,7 +9,7 @@
         <body>
             <h1 class="header">Homemade Mac and Cheese</h1>
 
-            <img src="../images_recipes/hmMacandCheese.jpg" alt="Some Tasty Mac and Cheese">
+            <img class="img3" src="../images_recipes/hmMacandCheese.jpg" alt="Some Tasty Mac and Cheese">
 
             <h3 class="minor-header">Description</h3>
             
