--- a/recipes/perogiesandonion.html
+++ b/recipes/perogiesandonion.html
@@ -9,7 +9,7 @@
         <body>
             <h1 class="header">Perogies, Vegan Sausage and Onion</h1>
 
-            <img src="../images_recipes/pierogi_vegansausage_onion.jpg" alt="Perogies, Vegan Sausage and Onion">
+            <img class="img2" src="../images_recipes/pierogi_vegansausage_onion.jpg" alt="Perogies, Vegan Sausage and Onion">
 
             <h3 class="minor-header">Description</h3>
 
